objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Utility Opportunities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Annual_Revenue__c</fullName>
        <description>Displays the account annual revenue on an opportunity</description>
        <formula>Account.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>Stores the Phone number of the related Account.</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Additional_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountInINR__c</fullName>
        <label>AmountInINR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule_for_Process_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helps in bypassing the Validation rule for process builder.</description>
        <label>Bypass Validation Rule for Process Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Date__c</fullName>
        <label>Delivery Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent to Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Contact Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Utility_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Utility Opportunities</businessProcess>
        <description>For use with opportunities for Utility customers</description>
        <label>Utility Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Delivery_Schedule_14_Days_Or_Less</fullName>
        <active>true</active>
        <description>Sets end date for initial delivery</description>
        <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp;  (  Delivery_Schedule_Date__c  -  CloseDate  )  &gt; 14</errorConditionFormula>
        <errorDisplayField>Delivery_Schedule_Date__c</errorDisplayField>
        <errorMessage>Dates of type delivery must be no later than 14 days after close date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_owner_read_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Profile.Name  &lt;&gt;  &apos;System Administrator&apos;, ISCHANGED(  OwnerId  ))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Owner can&apos;t be changed!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_updatiion_of_Account_phone</fullName>
        <active>true</active>
        <description>Restrict the updation of Account Phone field</description>
        <errorConditionFormula>AND( NOT( ISBLANK( AccountId ) ) ,
      ISCHANGED( Account_Phone__c ) ,
      NOT( Bypass_Validation_Rule_for_Process_Build__c )
 )</errorConditionFormula>
        <errorDisplayField>Account_Phone__c</errorDisplayField>
        <errorMessage>Account Phone cannot be changed !</errorMessage>
    </validationRules>
</CustomObject>